[package]
name = "tp"
version = "0.1.0"
authors = ["stephan"]
edition = "2018"
license = "MIT OR Apache-2.0"

[features]
default = []

async = ["tokio"]

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
tokio = { version = "1", optional = true, features = ["sync"] }

[dev-dependencies]
assert_approx_eq = "1.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
